Gallery fix on mobile devices.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -419,7 +419,7 @@ nav {
   left: 5%;
   font-size: 15vh;
   color: #c724b19c;
-  text-shadow: 3px 3px rgb(85, 83, 83);
+  text-shadow: 3px 3px rgb(0, 0, 0);
   font-family: "DM Sans", sans-serif;
   font-family: "Rancho", cursive;
 }
